--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/FreeRTOS-Kernel"]
 	path = lib/FreeRTOS-Kernel
-	url = https://github.com/FreeRTOS/FreeRTOS-Kernel
+	url = https://gitee.com/embeddedboys/FreeRTOS-Kernel
 [submodule "src/lvgl"]
 	path = src/lvgl
 	url = https://gitee.com/embeddedboys/lvgl.git
