--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,10 +67,10 @@ set(DISP_OVER_PIO 1)  # 1: PIO, 0: SPI
 math(EXPR LV_DISP_BUF_SIZE "${TFT_HOR_RES} * ${TFT_VER_RES} / 2")
 
 set(LCD_DRV_USE_ST7735  0)
-set(LCD_DRV_USE_ST7789  0)
+set(LCD_DRV_USE_ST7789  1)
 set(LCD_DRV_USE_SSD1327 0)
 set(LCD_DRV_USE_SSD1681 0)
-set(LCD_DRV_USE_EINK_LUATOS 1)
+set(LCD_DRV_USE_EINK_LUATOS 0)
 
 # driver layer cmake redefine
 if(LCD_DRV_USE_ST7735)
@@ -84,6 +84,8 @@ elseif(LCD_DRV_USE_SSD1681)
 elseif(LCD_DRV_USE_EINK_LUATOS)
 include(${CMAKE_CURRENT_LIST_DIR}/cmake/eink-luatos.cmake)
 endif()
+
+set(INDEV_DRV_USE_CST816D 1)
 
 SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -Wl,--print-memory-usage")
 SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS_RELEASE} -Wl,--print-memory-usage")
@@ -106,7 +108,11 @@ add_executable(${ProjectName}
     tft_ssd1327.c
     eink_ssd1681.c
     eink_luatos.c
+    indev.c
+    cst816d.c
+    i2c_tools.c
     porting/lv_port_disp_template.c
+    porting/lv_port_indev_template.c
 )
 
 target_include_directories(${ProjectName} PRIVATE
@@ -116,6 +122,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC .)
 target_link_libraries(${ProjectName}
     pico_stdlib
     pico_multicore
+    hardware_i2c
     hardware_spi
     hardware_pwm
     hardware_clocks
@@ -145,6 +152,9 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_ST7789=${LCD_DRV_U
 target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_SSD1327=${LCD_DRV_USE_SSD1327})
 target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_SSD1681=${LCD_DRV_USE_SSD1681})
 target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_EINK_LUATOS=${LCD_DRV_USE_EINK_LUATOS})
+
+# Indev drivers define
+target_compile_definitions(${PROJECT_NAME} PUBLIC INDEV_DRV_USE_CST816D=${INDEV_DRV_USE_CST816D})
 
 # Note: If you are using a NOR flash like "w25q16". Just keep the following content.
 # The maximum speed of "w25q16" is 133MHz, However, the clock speed of XIP QSPI is divided from "sys_clk".
