add 262k ili9481 support.
Signed-off-by: iotah <writeforever@foxmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,14 +66,17 @@ set(TFT_BUS_CLK_KHZ 62500)
 set(DISP_OVER_PIO 1)  # 1: PIO, 0: SPI
 math(EXPR LV_DISP_BUF_SIZE "${TFT_HOR_RES} * ${TFT_VER_RES} / 2")
 
+set(LCD_DRV_USE_ILI9481 1)
 set(LCD_DRV_USE_ST7735  0)
-set(LCD_DRV_USE_ST7789  1)
+set(LCD_DRV_USE_ST7789  0)
 set(LCD_DRV_USE_SSD1327 0)
 set(LCD_DRV_USE_SSD1681 0)
 set(LCD_DRV_USE_EINK_LUATOS 0)
 
 # driver layer cmake redefine
-if(LCD_DRV_USE_ST7735)
+if(LCD_DRV_USE_ILI9481)
+    include(${CMAKE_CURRENT_LIST_DIR}/cmake/ili9481.cmake)
+elseif(LCD_DRV_USE_ST7735)
     include(${CMAKE_CURRENT_LIST_DIR}/cmake/st7735.cmake)
 elseif(LCD_DRV_USE_ST7789)
     include(${CMAKE_CURRENT_LIST_DIR}/cmake/st7789.cmake)
@@ -103,6 +106,7 @@ target_compile_definitions(pio_spi_tx PUBLIC DEFAULT_PIO_CLK_KHZ=${PERI_CLK_KHZ}
 add_executable(${ProjectName}
     main.c
     tft.c
+    tft_ili9481.c
     tft_st7735s.c
     tft_st7789v.c
     tft_ssd1327.c
@@ -147,6 +151,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC DISP_OVER_PIO=${DISP_OVER_PIO}
 target_compile_definitions(${PROJECT_NAME} PUBLIC LV_DISP_BUF_SIZE=${LV_DISP_BUF_SIZE})
 
 # TFT drivers define
+target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_ILI9481=${LCD_DRV_USE_ILI9481})
 target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_ST7735=${LCD_DRV_USE_ST7735})
 target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_ST7789=${LCD_DRV_USE_ST7789})
 target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_SSD1327=${LCD_DRV_USE_SSD1327})
