add tsc2007 indev support
Signed-off-by: iotah <writeforever@foxmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -95,6 +95,7 @@ include(${CMAKE_CURRENT_LIST_DIR}/cmake/eink-luatos.cmake)
 endif()
 
 set(INDEV_DRV_USE_GT911   1)
+set(INDEV_DRV_USE_TSC2007 0)
 set(INDEV_DRV_USE_CST816D 0)
 
 SET(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -Wl,--print-memory-usage")
@@ -123,6 +124,7 @@ add_executable(${PROJECT_NAME}
     eink_luatos.c
     indev.c
     gt911.c
+    tsc2007.c
     cst816d.c
     i2c_tools.c
     porting/lv_port_disp_template.c
@@ -173,6 +175,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC LCD_DRV_USE_EINK_LUATOS=${LCD_
 # Indev drivers define
 target_compile_definitions(${PROJECT_NAME} PUBLIC INDEV_DRV_USE_CST816D=${INDEV_DRV_USE_CST816D})
 target_compile_definitions(${PROJECT_NAME} PUBLIC INDEV_DRV_USE_GT911=${INDEV_DRV_USE_GT911})
+target_compile_definitions(${PROJECT_NAME} PUBLIC INDEV_DRV_USE_TSC2007=${INDEV_DRV_USE_TSC2007})
 
 # Note: If you are using a NOR flash like "w25q16". Just keep the following content.
 # The maximum speed of "w25q16" is 133MHz, However, the clock speed of XIP QSPI is divided from "sys_clk".
